# Sandbox

packet_reader/: udp_reader.py
ros_ws/devel/: .catkin  .rosinstall  setup.sh
ros_ws/devel/lib/pkgconfig/: atlas_moveit_config.pc  atlas_v3_moveit_config.pc  baxter_ikfast_left_arm_plugin.pc  baxter_ikfast_right_arm_plugin.pc  baxter_moveit_config.pc  clam_moveit_config.pc  iri_wam_moveit_config.pc  pl_test.pc  r2_moveit_generated.pc
ros_ws/devel/lib/pl_test/: pl_test
ros_ws/devel/share/atlas_moveit_config/cmake/: atlas_moveit_configConfig.cmake
ros_ws/devel/share/atlas_v3_moveit_config/cmake/: atlas_v3_moveit_configConfig.cmake
ros_ws/devel/share/baxter_ikfast_left_arm_plugin/cmake/: baxter_ikfast_left_arm_pluginConfig.cmake
ros_ws/devel/share/baxter_ikfast_right_arm_plugin/cmake/: baxter_ikfast_right_arm_pluginConfig.cmake
ros_ws/devel/share/baxter_moveit_config/cmake/: baxter_moveit_configConfig.cmake
ros_ws/devel/share/clam_moveit_config/cmake/: clam_moveit_configConfig.cmake
ros_ws/devel/share/iri_wam_moveit_config/cmake/: iri_wam_moveit_configConfig.cmake
ros_ws/devel/share/pl_test/cmake/: pl_testConfig.cmake
ros_ws/devel/share/r2_moveit_generated/cmake/: r2_moveit_generatedConfig.cmake
ros_ws/src/pl_test/: CMakeLists.txt  package.xml
ros_ws/src/pl_test/launch/: ompl_planning.yaml  pl_test.launch  sphere_robot.srdf  sphere_robot.urdf
ros_ws/src/pl_test/nodes/: pl_test.cpp
