<?xml version="1.0"?>
<package>
  <name>pl_test</name>
  <version>0.0.0</version>
  <description>The moveit test package</description>

  <maintainer email="chengshangyi@gmail.com">Shangyi Cheng</maintainer>

  <license>For Aevena use only</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_ros</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>moveit_ros</run_depend>
  <run_depend>tf</run_depend>
</package>
